# neurospark-core

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: feature_flags.json
docker/: Dockerfile.api  Dockerfile.auditor  Dockerfile.base  Dockerfile.curator  Dockerfile.custodian  Dockerfile.governor  Dockerfile.professor  Dockerfile.reviewer  Dockerfile.tutor  Dockerfile.vectoriser
docs/: PROMPT.md
examples/: agent_communication_demo.py  e2e_agent_communication.py
migrations/: env.py
scripts/: deploy.sh  generate_test_fixtures.py  init_db.py  prd.txt  rollback.sh  run_cd.sh  run_ci.sh  run_curator_local.sh  run_curator_monitor_local.sh  run_performance_tests.sh  run_security_scan.sh  update_validators.py
src/: __init__.py
src/agents/: __init__.py  base.py  enhanced_agent.py  enhanced_message.py  factory.py  llm_agent.py  manager.py  service_discovery.py
src/api/: __init__.py  main.py
src/common/: __init__.py  config.py  feature_flags.py  health.py
src/database/: __init__.py  connection.py  models.py
src/message_bus/: __init__.py  base.py  redis_streams.py
src/search/: __init__.py  elastic.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json  tasks.json.bak
tests/: __init__.py  conftest.py  test_api_health.py  test_ci_config.py  test_common_config.py  test_common_health.py  test_database_connection.py  test_database_models.py  test_docker_base.py  test_docker_compose.py  test_docker_services.py  test_init_db.py  test_message_bus.py  test_search.py  test_storage.py  test_vector_store.py  test_vector_utils.py
(+60 files in other folders)
